Parsing and printing results
Can now read, validate, and process a results file (section, places,
participants) and print a summary of the objects it has created.

Classes include: Places, Participants, Results, SectionResult

--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -39,9 +39,9 @@ schools:
  - Roseville (Roseville College)
  - Santa (Santa Sabina College)
  - SCEGGS (SCEGGS Darlinghurst)
- - Catherines (St Catherine’s)
- - Clares (St Clare’s)
- - Vincents (St Vincent’s)
+ - StCatherines (St Catherine’s)
+ - StClares (St Clare’s)
+ - StVincents (St Vincent’s)
  - Tangara
  - Tara
  - Wenona
