First pass at reporting implementation: Status
I've implemented reporting infrastructure:
 * base class Report::Base (pr, nl, string, timestamp)
 * main class Report::Report
 * helper classes Report::{Header,Status,Summary,Sections,Schools,Footer}

The header, status and footer are printing correctly. The others are
placeholders.

Sufficient functionality has been added to Results and SectionResult to get the
Status working.

FestivalInfo now knows what year the competition is for and it distinguishes
between junior and senior sections.

--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -5,15 +5,29 @@
 #   "schools": list of schools
 #   "points": hash of points (keys: 1,2,3,4,5,participation)
 
+year: 2012
+
+# sections:
+#  - Reading (Junior)
+#  - Poetry (Junior)
+#  - Public Speaking (Junior)
+#  - Reading (Senior)
+#  - Poetry (Senior)
+#  - Public Speaking (Senior)
+#  - Current Affairs
+#  - Religious and Ethical Questions
+
 sections:
- - Reading (Junior)
- - Reading (Senior)
- - Poetry (Junior)
- - Poetry (Senior)
- - Public Speaking (Junior)
- - Public Speaking (Senior)
- - Current Affairs
- - Religious and Ethical Questions
+  junior:
+    - Reading (Junior)
+    - Poetry (Junior)
+    - Public Speaking (Junior)
+  senior:
+    - Reading (Senior)
+    - Poetry (Senior)
+    - Public Speaking (Senior)
+    - Current Affairs
+    - Religious and Ethical Questions
 
 schools:
  - Abbotsleigh
