Corrected non-ASCII character in festival info data

--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -43,7 +43,7 @@ schools:
  - Normanhurst (Loreto Normanhurst)
  - Meriden
  - MLC (MLC Sydney)
- - Monte (Monte Sant’ Angelo)
+ - Monte (Monte Sant' Angelo)
  - OLMC (Our Lady of Mercy College)
  - PLCS (PLC Sydney)
  - Armidale (PLC Armidale)
@@ -53,9 +53,9 @@ schools:
  - Roseville (Roseville College)
  - Santa (Santa Sabina College)
  - SCEGGS (SCEGGS Darlinghurst)
- - StCatherines (St Catherine’s)
- - StClares (St Clare’s)
- - StVincents (St Vincent’s)
+ - StCatherines (St Catherine's)
+ - StClares (St Clare's)
+ - StVincents (St Vincent's)
  - Tangara
  - Tara
  - Wenona
