--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -26,6 +26,7 @@ sections:
     - Reading (Senior)
     - Poetry (Senior)
     - Public Speaking (Senior)
+    - Drama
     - Current Affairs
     - Religious and Ethical Questions
 
@@ -61,9 +62,10 @@ schools:
  - Wenona
 
 points:
-  1: 30
-  2: 25
-  3: 20
-  4: 15
-  5: 10
-  participation: 5
+  1: 15
+  2: 12
+  3: 10
+  4: 8
+  5: 6
+  participation: 3
+
