Implemented festival awards
* Junior, Senior and Total points in report now the best three (or
  whatever) scores added together, as the rules for the festival awards
  states. Also, the scores are printed alongside the total for easy
  verification.

* SchoolLeaderboard class replaced with FestivalAwardsLeaderboard, which
  aggregates (new class) SchoolResults objects, which is aware of eligibility
  for festival awards. Leaderboard objects are created on demand now, instead
  of at Results object initialisation time.

* New class Result contains outcome and points; replaces the array [:p, 5]
  that was passed around before. This touches some of the reporting code.

* 'full_participant' and 'awards' eligibility config added to
  festival_info.yaml, but not implemented in code yet.

* Text report also written to 'latest.txt' to allow refreshing within
  the browser.

* Todo: refine the methods provided in Results. Now that we have
  SchoolResults, it should be feasible to do things like
    results.school("Armidale").section("Current Affairs") -> Result[:dnp, 0]
  and clean up the points_for_school and who knows what else is in there.

* If a places string is empty, the program can still go on, and the report
  shows "waiting" for that section. Before this change, an empty string would
  cause an error.

--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -59,3 +59,9 @@ points:
   5: 10
   participation: 5
 
+full_participant: "must enter 5; must enter CA or REQ"
+
+awards:
+  junior:  "must enter 3; count best 3"
+  senior:  "must enter 4; count best 3"
+  overall: "full participant; count all"
