Results changed after student stripped of her title!
OK, not that exciting. The junior poetry winner was too old for the junior
division, so was struck out and schools in places 2-6 were moved up.

--- a/data/2012/results.yaml
+++ b/data/2012/results.yaml
@@ -44,9 +44,10 @@
    - StVincents
 
 - Section: Poetry (Junior)
-  Places: "1. Queenwood  2. Monte  3. Brigidine  4. Ravenswood  5. Calrossy"
+  Places: "1. Monte  2. Brigidine  3. Ravenswood  4. Calrossy  5. Normanhurst"
   Nonparticipants:
    - OLMC
+   - Queenwood
    - StClares
 
 - Section: Public Speaking (Junior)
