--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -59,6 +59,14 @@ points:
   5: 10
   participation: 5
 
+#points:
+#  1: 15
+#  2: 12
+#  3: 10
+#  4: 8
+#  5: 6
+#  participation: 3
+
 full_participant: "must enter 5; must enter CA or REQ"
 
 awards:
