--- a/data/2012/festival_info.yaml
+++ b/data/2012/festival_info.yaml
@@ -52,12 +52,14 @@ schools:
  - Wenona
 
 points:
-  1: 30
-  2: 25
-  3: 20
-  4: 15
-  5: 10
-  participation: 5
+  debating:
+  other:
+    1: 30
+    2: 25
+    3: 20
+    4: 15
+    5: 10
+    participation: 5
 
 #points:
 #  1: 15
