--- a/data/2013/festival_info.yaml
+++ b/data/2013/festival_info.yaml
@@ -9,10 +9,12 @@ year: 2013
 
 sections:
   junior:
+    - Debating (Junior)
     - Reading (Junior)
     - Poetry (Junior)
     - Public Speaking (Junior)
   senior:
+    - Debating (Senior)
     - Reading (Senior)
     - Poetry (Senior)
     - Public Speaking (Senior)
@@ -52,13 +54,24 @@ schools:
  - Wenona
 
 # New points system starting 2013.
+# Configuration looks different because debating is now included.
 points:
-  1: 15
-  2: 12
-  3: 10
-  4: 8
-  5: 6
-  participation: 3
+  debating:
+    participation: 3
+    Round1:        2
+    Round2A:       2
+    Round2B:       2
+    QuarterFinal:  3
+    SemiFinal:     5
+    GrandFinal:    5
+  other:
+    1: 15
+    2: 12
+    3: 10
+    4: 8
+    5: 6
+    participation: 3
+
 
 # I don't believe the full_participant configuration actually does anything.
 full_participant: "must enter 5; must enter CA or REQ"
