--- a/test/_data/data/2012/festival_info.yaml
+++ b/test/_data/data/2012/festival_info.yaml
@@ -61,9 +61,18 @@ schools:
  - Wenona
 
 points:
-  1: 30
-  2: 25
-  3: 20
-  4: 15
-  5: 10
-  participation: 5
+  debating:
+    participation: 5
+    Round1:        5
+    Round2A:       5
+    Round2B:       5
+    QuarterFinal:  5
+    SemiFinal:     5
+    GrandFinal:    5
+  other:
+    1: 30
+    2: 25
+    3: 20
+    4: 15
+    5: 10
+    participation: 5
