Fixed enough code to get a DebatingResults object created
(in test/debating_results.rb, which should be renamed to debating.rb)

--- a/test/_data/data/2013/debating_results.yaml
+++ b/test/_data/data/2013/debating_results.yaml
@@ -86,7 +86,7 @@ Debating (Junior):
 
 # The data for senior debating is identical to the data for junior debating.
 
-Debating (Junior):
+Debating (Senior):
 
   Round1:
     Schools: >
