--- a/test/_data/data/2013/festival_info.yaml
+++ b/test/_data/data/2013/festival_info.yaml
@@ -9,10 +9,12 @@ year: 2013
 
 sections:
   junior:
+    - Debating (Junior)
     - Reading (Junior)
     - Poetry (Junior)
     - Public Speaking (Junior)
   senior:
+    - Debating (Senior)
     - Reading (Senior)
     - Poetry (Senior)
     - Public Speaking (Senior)
