Tested debating results code
Works well. Still to implement wildcard and validity checking.

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -9,9 +9,9 @@ Debating (Junior):
   Round1:
     Schools: >
       Canberra SCEGGS Wenona Tangara Queenwood Meriden Santa Frensham
-      Kincoppal Brigidine Normanhurst StVincents Armidale MLC StCatherines
-      Pymble OLMC Abbotsleigh Danebank Ascham StPatricks Monte Tara
-      PLCS Ravenswood
+      Kincoppal Kirribilli Brigidine Normanhurst StVincents Armidale MLC
+      StCatherines Pymble OLMC Abbotsleigh Danebank Ascham StPatricks Monte
+      Tara PLCS Ravenswood
     Results:
       - Canberra    def SCEGGS
       - Wenona      def Tangara
