--- a/test/_data/data/2013/debating_results.yaml
+++ b/test/_data/data/2013/debating_results.yaml
@@ -9,9 +9,9 @@ Debating (Junior):
   Round1:
     Schools: >
       Canberra SCEGGS Wenona Tangara Queenwood Meriden Santa Frensham
-      Kincoppal Brigidine Normanhurst StVincents Armidale MLC StCatherines
-      Pymble OLMC Abbotsleigh Danebank Ascham StPatricks Monte Tara
-      PLCS Ravenswood
+      Kincoppal Kirribilli Brigidine Normanhurst StVincents Armidale MLC
+      StCatherines Pymble OLMC Abbotsleigh Danebank Ascham StPatricks Monte
+      Tara PLCS Ravenswood
     Results:
       - Canberra    def SCEGGS
       - Wenona      def Tangara
@@ -49,7 +49,7 @@ Debating (Junior):
     Results:
       - SCEGGS      def Tangara
       - Frensham    def Meriden
-      - Kincoppal   def Normanhurst
+      - Kirribilli  def Normanhurst
       - StVincents  def Armidale
       - OLMC        def StPatricks
       - Tara        def Ravenswood
@@ -66,10 +66,10 @@ Debating (Junior):
 
   SemiFinal:
     Schools: >
-      Kincoppal Monte Pymble StVincents
+      Kincoppal Frensham Pymble StVincents
     Results:
       - Kincoppal   def Pymble
-      - StVincents  def Monte
+      - StVincents  def Frensham
 
   GrandFinal:
     Schools: >
