--- a/test/_data/data/2013/festival_info.yaml
+++ b/test/_data/data/2013/festival_info.yaml
@@ -26,7 +26,7 @@ schools:
   - Abbotsleigh
   - Ascham
   - Brigidine
-  - "Canberra (Canberra Girls' Grammar)"
+  - "Canberra (Canberra Girls Grammar)"
   - Danebank
   - Frensham
   - Kambala
@@ -39,7 +39,7 @@ schools:
   - OLMC (Our Lady of Mercy College)
   - Armidale (PLC Armidale)
   - PLCS (PLC Sydney)
-  - "Pymble (Pymble Ladies' College)"
+  - "Pymble (Pymble Ladies College)"
   - Queenwood
   - Ravenswood
   - Roseville (Roseville College)
