Added validation checking to debating results
Call DebatingResults#validation_errors to get a list of things that
are wrong with the data, like winners from one round not appearing
in the next.

--- a/test/_data/data/2013/debating_results.yaml
+++ b/test/_data/data/2013/debating_results.yaml
@@ -47,12 +47,12 @@ Debating (Junior):
       SCEGGS Tangara Meriden Frensham Kirribilli Normanhurst
       Armidale StCatherines OLMC StPatricks Tara Ravenswood
     Results:
-      - SCEGGS      def Tangara
-      - Frensham    def Meriden
-      - Kirribilli  def Normanhurst
-      - StVincents  def Armidale
-      - OLMC        def StPatricks
-      - Tara        def Ravenswood
+      - SCEGGS        def Tangara
+      - Frensham      def Meriden
+      - Kirribilli    def Normanhurst
+      - StCatherines  def Armidale
+      - OLMC          def StPatricks
+      - Tara          def Ravenswood
 
   QuarterFinal:
     Wildcard: Frensham (added)
