Fixed up 2013 results data to start testing debating
(It was a copy of 2012 data but some of those schools didn't participate
this year.)

--- a/test/_data/data/2013/results.yaml
+++ b/test/_data/data/2013/results.yaml
@@ -1,24 +1,20 @@
-# These are the 2011 results with the following changes:
-#  - debating excluded
-#  - "Prose reading" simply called "Reading"
-#  - NEGS removed from the results as they are not participating in 2012
-#  - Current Affairs modified to have two 4th places instead of two 5th places
-#    (12355 is not a valid place string; 12344 is)
+# This 2013 test data is the same as 2012 (the point is to test that this works
+# in conjunction with debating, not that it works per se) but with Calrossy
+# and StClares replaced with other schools, as these did not compete in 2013.
 
 - Section: Poetry (Junior)
-  Places: "1. SCEGGS  2. Kirribilli  3. Calrossy  4. PLCS  5. Tangara"
+  Places: "1. SCEGGS  2. Kirribilli  3. Ravenswood  4. PLCS  5. Tangara"
   Nonparticipants:
     - MLC
     - OLMC
     - Roseville
-    - StClares
 
 # Called "Prose reading" in 2011, appears to be called just "Reading" in 2012.
 
 - Section: Reading (Junior)
-  Places: "1. Kincoppal  2. Calrossy  3. StCatherines  4. Ravenswood  5. Wenona"
+  Places: "1. Kincoppal  2. Normanhurst  3. StCatherines  4. Ravenswood  5. Wenona"
   Nonparticipants:
-    - StClares
+    - OLMC
 
 - Section: Public Speaking (Junior)
   Places: "1. Kirribilli  2. Tara  3. Kincoppal  4. Tangara  5. SCEGGS"
@@ -30,7 +26,6 @@
 - Section: Current Affairs
   Places: "1. PLCS  2. Pymble  3. Abbotsleigh  4. Canberra  4. StVincents"
   Nonparticipants:
-    - Calrossy
     - Danebank
     - Kincoppal
     - Kirribilli
@@ -38,7 +33,6 @@
     - OLMC
     - Queenwood
     - Roseville
-    - StClares
     - Tara
     - Wenona
 
@@ -49,7 +43,6 @@
     - Kirribilli
     - OLMC
     - Santa
-    - StClares
     - Tara
 
 - Section: Reading (Senior) 
@@ -58,7 +51,6 @@
     - Kirribilli
     - OLMC
     - Roseville
-    - StClares
     - Tara
 
 - Section: Public Speaking (Senior)
@@ -71,7 +63,6 @@
 - Section: Religious and Ethical Questions
   Places: "1. Canberra  2. Kambala  3. Normanhurst  3. Monte  5. Armidale"
   Nonparticipants:
-    - Calrossy
     - Danebank
     - Kirribilli
     - MLC
@@ -79,4 +70,3 @@
     - Roseville
     - Santa
     - StCatherines
-    - StClares
