Report successfully generated with Debating data
Far from complete.  The total_points in the summary is a hardcoded result just
to get a report printed.  There is no "Debating" section.

However, the points are being added up correctly for each school, including
debating, and the results are being printed nicely.  Here is an example:

  PLC Sydney                 (J: 37  S: 53  T: 90)
    Junior
      Debating                7 points (p, r1, r2a)
      Reading                12 points (2nd place)
      Poetry                  3 points (p)
      Public Speaking        15 points (1st place)
    Senior
      Debating               15 points (p, r1, r2a, qf, sf)
      Reading                 6 points (5th place)
      Poetry                  3 points (p)
      Public Speaking        10 points (3rd place)
      Drama                  12 points (2nd place)
      Current Affairs         3 points (p)
      Religious and ...      12 points (2nd place)

As the code stands now, I could print a report at the end of the festival.
However, it wouldn't contain a detailed account of Debating.

Also, I couldn't create reports _during_ the festival, because I'm pretty sure
that incomplete debating data will cause an error.

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -47,12 +47,12 @@ Debating (Junior):
       SCEGGS Tangara Meriden Frensham Kirribilli Normanhurst
       Armidale StCatherines OLMC StPatricks Tara Ravenswood
     Results:
-      - SCEGGS      def Tangara
-      - Frensham    def Meriden
-      - Kincoppal   def Normanhurst
-      - StVincents  def Armidale
-      - OLMC        def StPatricks
-      - Tara        def Ravenswood
+      - SCEGGS        def Tangara
+      - Frensham      def Meriden
+      - Kirribilli    def Normanhurst
+      - StCatherines  def Armidale
+      - OLMC          def StPatricks
+      - Tara          def Ravenswood
 
   QuarterFinal:
     Wildcard: Frensham (added)
@@ -66,10 +66,10 @@ Debating (Junior):
 
   SemiFinal:
     Schools: >
-      Kincoppal Monte Pymble StVincents
+      Kincoppal Frensham Pymble StVincents
     Results:
       - Kincoppal   def Pymble
-      - StVincents  def Monte
+      - StVincents  def Frensham
 
   GrandFinal:
     Schools: >
@@ -86,14 +86,14 @@ Debating (Junior):
 
 # The data for senior debating is identical to the data for junior debating.
 
-Debating (Junior):
+Debating (Senior):
 
   Round1:
     Schools: >
       Canberra SCEGGS Wenona Tangara Queenwood Meriden Santa Frensham
-      Kincoppal Brigidine Normanhurst StVincents Armidale MLC StCatherines
-      Pymble OLMC Abbotsleigh Danebank Ascham StPatricks Monte Tara
-      PLCS Ravenswood
+      Kincoppal Kirribilli Brigidine Normanhurst StVincents Armidale MLC
+      StCatherines Pymble OLMC Abbotsleigh Danebank Ascham StPatricks Monte
+      Tara PLCS Ravenswood
     Results:
       - Canberra    def SCEGGS
       - Wenona      def Tangara
@@ -129,12 +129,12 @@ Debating (Junior):
       SCEGGS Tangara Meriden Frensham Kirribilli Normanhurst
       Armidale StCatherines OLMC StPatricks Tara Ravenswood
     Results:
-      - SCEGGS      def Tangara
-      - Frensham    def Meriden
-      - Kincoppal   def Normanhurst
-      - StVincents  def Armidale
-      - OLMC        def StPatricks
-      - Tara        def Ravenswood
+      - SCEGGS        def Tangara
+      - Frensham      def Meriden
+      - Kirribilli    def Normanhurst
+      - StCatherines  def Armidale
+      - OLMC          def StPatricks
+      - Tara          def Ravenswood
 
   QuarterFinal:
     Wildcard: Frensham (added)
@@ -148,13 +148,15 @@ Debating (Junior):
 
   SemiFinal:
     Schools: >
-      Kincoppal Monte Pymble StVincents
+      Kincoppal Frensham Pymble StVincents
     Results:
       - Kincoppal   def Pymble
-      - StVincents  def Monte
+      - StVincents  def Frensham
 
   GrandFinal:
     Schools: >
       Kincoppal StVincents
     Results:
       - Kincoppal     def StVincents
+
+
