Updated debating test
:r2a etc instead of :Round2A etc.

Also commented out some debating results so I can test partial results.

--- a/data/2013/debating_results.yaml
+++ b/data/2013/debating_results.yaml
@@ -54,28 +54,28 @@ Debating (Junior):
       - OLMC          def StPatricks
       - Tara          def Ravenswood
 
-  QuarterFinal:
-    Wildcard: Frensham (added)
-    Schools: >
-      Canberra Santa Kincoppal StVincents Pymble Monte PLCS Frensham
-    Results:
-      - Kincoppal   def Monte
-      - Frensham    def PLCS
-      - Pymble      def Canberra
-      - StVincents  def Santa
-
-  SemiFinal:
-    Schools: >
-      Kincoppal Frensham Pymble StVincents
-    Results:
-      - Kincoppal   def Pymble
-      - StVincents  def Frensham
-
-  GrandFinal:
-    Schools: >
-      Kincoppal StVincents
-    Results:
-      - Kincoppal     def StVincents
+#  QuarterFinal:
+#    Wildcard: Frensham (added)
+#    Schools: >
+#      Canberra Santa Kincoppal StVincents Pymble Monte PLCS Frensham
+#    Results:
+#      - Kincoppal   def Monte
+#      - Frensham    def PLCS
+#      - Pymble      def Canberra
+#      - StVincents  def Santa
+#
+#  SemiFinal:
+#    Schools: >
+#      Kincoppal Frensham Pymble StVincents
+#    Results:
+#      - Kincoppal   def Pymble
+#      - StVincents  def Frensham
+#
+#  GrandFinal:
+#    Schools: >
+#      Kincoppal StVincents
+#    Results:
+#      - Kincoppal     def StVincents
 
 
 # =============================================================================
